Small fix after code review.

--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -26,7 +26,7 @@
 
   <body>
     <!-- navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" id="ambrose-navbar">
       <div class="navbar-inner">
         <div class="container-fluid">
           <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -36,7 +36,7 @@
           </button>
           <a class="brand" href="#">Ambrose</a>
           <div class="nav-collapse collapse">
-            <ul class="nav leftList">
+            <ul class="nav">
               <li><a href="dashboard.html">Dashboard</a></li>
               <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
