--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -59,6 +59,9 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
+        <div class="span12" id="ambrose-view-title"></div>
+      </div>
+      <div class="row-fluid">
         <div class="span12" id="ambrose-view-progress-bar"></div>
       </div>
       <div class="row-fluid" id="diagrams">
