--- a/common/src/main/resources/com/twitter/ambrose/server/web/dashboard.html
+++ b/common/src/main/resources/com/twitter/ambrose/server/web/dashboard.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Data workflow visualization and monitoring">
     <meta name="author" content="Twitter">
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/ambrose.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -25,55 +26,52 @@
   <body>
 
     <!-- navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+    <nav id="ambrose-navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Ambrose</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="dashboard.html">Dashboard</a></li>
-              <li class="dropdown">
-                <a id="cluster-dropdown" href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  Cluster
-                  <b class="caret"></b>
-                </a>
-                <ul id="cluster-menu" class="dropdown-menu" role="menu" aria-labelledby="cluster-dropdown"></ul>
-              </li>
-              <li class="dropdown">
-                <a id="status-dropdown" href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  Status
-                  <b class="caret"></b>
-                </a>
-                <ul id="status-menu" class="dropdown-menu" role="menu" aria-labelledby="status-dropdown"></ul>
-              </li>
-            </ul>
-            <form id="user-form" class="navbar-form pull-left">
-              <input id="user-field" type="text" class="span2" placeholder="User" />
-              <button id="user-form-btn" type="submit" class="btn">Filter</button>
-            </form>
-            <ul class="nav pull-right">
-              <li><a target="_blank" href="https://github.com/twitter/ambrose">About</a></li>
-            </ul>
-          </div>
+          <a class="navbar-brand" href="#">Ambrose</a>
+        </div>
+        <div class="collapse navbar-collapse" id="main-navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="dashboard.html">Dashboard</a></li>
+            <li class="dropdown">
+              <a id="cluster-button" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false">Cluster <span class="caret"></span></a>
+              <ul id="cluster-menu" class="dropdown-menu" role="menu" aria-labelledby="cluster-button"></ul>
+            </li>
+            <li class="dropdown">
+              <a id="status-button" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false">Status <span class="caret"></span></a>
+              <ul id="status-menu" class="dropdown-menu" role="menu" aria-labelledby="status-button"></ul>
+            </li>
+          </ul>
+          <form id="user-form" class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <input id="user-field" type="text" class="form-control" placeholder="User" />
+            </div>
+            <button id="user-form-btn" type="submit" class="btn btn-default">Filter</button>
+          </form>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a target="_blank" href="https://github.com/twitter/ambrose">About</a></li>
+          </ul>
         </div>
       </div>
-    </div>
+    </nav>
 
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span12">
           <p class="dashboard-status lead">
             Workflows on cluster
-            <strong id="current-cluster" class=""></strong>
+            <strong id="current-cluster">undefined</strong>
             with status
-            <strong id="current-status"></strong>
+            <strong id="current-status">running</strong>
             and user
-            <strong id="current-user"></strong>.
+            <strong id="current-user">any</strong>.
           </p>
           <table class="table table-hover ambrose-dashboard">
             <thead>
@@ -88,23 +86,18 @@
             </thead>
             <tbody id="workflows"></tbody>
           </table>
-        </div>
-      </div>
-
-      <div class="row-fluid">
-        <div class="span12">
-          <div class="pagination pagination-large pagination-centered">
-            <ul>
-              <li><a href="#" id="page-prev-link">&laquo;</a></li>
-              <li><a href="#" id="page-next-link">&raquo;</a></li>
+          <nav>
+            <ul class="pagination pagination-lg">
+              <li><a id="page-prev-link" href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+              <li><a id="page-next-link" href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
             </ul>
-          </div>
+          </nav>
         </div>
       </div>
 
       <hr>
       <footer>
-        <p>&copy; Twitter 2013</p>
+        <p>&copy; Twitter 2014</p>
       </footer>
     </div>
 
